--- a/resume-old-jan-2021.tex
+++ b/resume-old-jan-2021.tex
@@ -80,37 +80,33 @@
 \begin{document}
 
 %----------HEADING-----------------
-\begin{tabular*}
-{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{{\Large Mershab Issadien}} & \href{mailto:mershab99@gmail.com}{mershab99@gmail.com}\\
- "Sufficiently advanced technology is indistinguishable from magic"  & \href +1-647-284-8025 \\
- - Arthur C. Clarke &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
-& \href{www.github.com/mershab99}{github.com/mershab99}\\
-% & GitHub : \href{www.github.com/mershab99}{www.github.com/mershab99}
+\begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
+  \textbf{\href{http://google.com/}{\Large Mershab Issadien}} & Email : \href{mailto:mershab99@gmail.com}{mershab99@gmail.com}\\
+  \href& Mobile : +1-647-284-8025 \\
 \end{tabular*}
 
 
-%--------PROGRAMMING SKILLS------------
-\section{Programming Skills}
+%-----------EDUCATION-----------------
+\section{Education}
   \resumeSubHeadingListStart
-	\item{
-	\textbf{Proficient}{: Java, Python, REST Frameworks (Flask, Dropwizard), Maven, MongoDB, SQL, Docker, Git version control, C\#, Arduino}
-    	}
-	\item{
-		\textbf{Learning}{: Kubernetes, InfluxDB, PostgreSQL, Django, Node.js}
-	}
+    \resumeSubheading
+      {University of Ottawa}{Ottawa, ON}
+      {Bsc. Honours Computer Science}{September 2017 - Current}
   \resumeSubHeadingListEnd
-%---------------------------------------------
+
 
 %-----------EXPERIENCE-----------------
 \section{Experience}
   \resumeSubHeadingListStart
+
+
+
 	\resumeSubheading
 	{Praizl Inc.}{Richmond Hill, ON - Remote}
-	{Full-Stack Software Engineer}{July 2020 - Present}
+	{Full-Stack Software Engineer}{Jan 2021 - Present}
 		\resumeItemListStart
 			\resumeItem{REST API}
-			{Developed a REST APIs using Flask and Dropwizard. Built Resources for endpoints including User Management Resources for easy front-end communication}
+			{Developed a REST API using Python(Flask) and Java(Dropwizard). Built Resources for endpoints including User Management Resources for easy front-end communication}
 			\resumeItem{Database}
 			{Built MongoDB data schema + Java-Mongo communication library and developed Python data-stores. Built Mongo Caching layer which reduced latency/load time by 40\% Managed and maintained InfluxDB datastore}
 			\resumeItem{Efficiency}
@@ -118,42 +114,25 @@
 			\resumeItem{Analytics}
 			{Developed Recommendation Engine for Real Estate Insights using InfluxDB time-series data, as well as manipulated datasets using mathematical algorithms}
 			\resumeItem{Testing and Validation}
-			{Tested and validated my own code.}
+			{Tested and validated my own code. PR's were also subject to code review by senior engineers on every merge.}
 			\resumeItem{Deployment}
 			{Using Docker and Kubernetes, Deploying and maintaining containers with load balancing (.yaml configurations) }
 			\resumeItem{Project Management}
 			{Worked in Agile teams on a Feature-by-Feature basis using SCRUM organizational tools }
-			\resumeItem{Mentorship}
-			{Worked under direct tutelage, and subject to code reviews by ex-Salesforce, ex-Uber, ex-Microsoft software engineers. }
 		\resumeItemListEnd
 	    \resumeSubheading
 	      {The Home Depot}{Richmond Hill, ON}
 	      {Sales Associate/Inventory Associate}{May 2019 - August 2019}
 	      \resumeItemListStart
+	        \resumeItem{General}
+	          {Developed teamwork skills as a sales associate, and learned the sales model of Home Depot through customer interaction.}
 	        \resumeItem{System Feedback}
-	          {Learned the inventory system (SAP powered) as well as provided bug feedback for the software development team. Identified and called out process inefficiencies saving employees an hour a day.}
+	          {Learned the inventory system (SAP powered) as well as provided bug feedback for the software development team. Improved efficiency by 12.5\% (1 Hour Day)}
 		\resumeItem{Accomplishments}
 		 {Sales Employee of the Month (July), 3x Homer Awards}     
 \resumeItemListEnd
 
 \resumeSubHeadingListEnd
-
-%-----------EDUCATION-----------------
-\section{Education}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {University of Ottawa}{Ottawa, ON}
-      {BSc. Honours Computer Science}{September 2017 - Current}
-	\resumeItemListStart
-		\resumeItem{Notable Courses}
-		{Technical Report Writing, Requirements Engineering, Software Engineering, Data Structures and Algorithms, Statistics, Formal Languages}
-	\resumeItem{Clubs/Projects}
-		{Uottawa CSME (Engineering Association). Built the e-mail system for the website uOttawaCSME.ca. UOttawa Dota 2 B Team Captain}	
-%		\resumeItem{Sports}
-%		{Captain of the UOttawa Dota 2 B Team}
-	\resumeItemListEnd
-  \resumeSubHeadingListEnd
-
       
 % --------Multiple Positions Heading------------
 %    \resumeSubSubheading
@@ -174,22 +153,24 @@
   \resumeSubHeadingListStart
 	\resumeSubheading
 	{Ryerson Climate Hack-To-Action Hackathon}{Toronto, ON}
-	{Team Hackathon Competitor - 3rd Place }{May 2016}
+	{Team Hackathon Competitor}{May 2016}
 		\resumeItemListStart
 			\resumeItem{General}
-			{Developed a user focused carbon credit Android application with a SQL backend within 24 hours.}
+			{Developed a functional Android application with a SQL backend within 24 hours.}
+			\resumeItem{Result}
+			{3rd Place (\$1000 Prize)}
 		\resumeItemListEnd
-%	\resumeSubheading
-%	{YRDSB QUEST 2016}{Richmond Hill, ON}
-%	{Engineering Team Lead}{May 2016}
-%		\resumeItemListStart
-%			\resumeItem{Leadership}
-%			{Lead a team of 3 tech/engineering students, performed requirement elicitation, communicated with other interdisciplinary teams and managed a project schedule to finish well within the timeline. }
-%			\resumeItem{Project Description}
-%			{Array of flowers that individually opened up based on proximity. Developed for mental health awareness.}
-%			\resumeItem{General}
-%			{Worked in interdisciplinary groups to create electronics backed art installations using Arduino and solenoids.}
-%		\resumeItemListEnd
+	\resumeSubheading
+	{YRDSB QUEST 2016}{Richmond Hill, ON}
+	{Engineering Team Lead}{May 2016}
+		\resumeItemListStart
+			\resumeItem{Leadership}
+			{Lead a team of 3 tech/engineering students, performed requirement elicitation, communicated with other interdisciplinary teams and managed a project schedule to finish well within the timeline. }
+			\resumeItem{Project Description}
+			{Array of flowers that individually opened up based on proximity. Developed for mental health awareness.}
+			\resumeItem{General}
+			{Worked in interdisciplinary groups to create electronics backed art installations using Arduino and solenoids.}
+		\resumeItemListEnd
 %	\resumeSubheading
 %	{YRDSB QUEST 2015}{Richmond Hill, ON}
 %	{Engineering Team Lead}{May 2015}
@@ -207,11 +188,26 @@
 \section{References}
 	\resumeSubHeadingListStart
 		\resumeSubheading
-		{References Available Upon Request}{}{}{}
+		{Ramie Raufdeen}{Praizl Project}
+		{Senior Software Engineer at Salesforce}{}
+			\resumeItemListStart
+				\resumeSubItem{Relationship}
+				{Ramie mentored me and supervised my work on the Praizl project.}
+			\resumeItemListEnd
 	\resumeSubHeadingListEnd
 
-
 %
+%--------PROGRAMMING SKILLS------------
+\section{Programming Skills}
+  \resumeSubHeadingListStart
+	\item{
+	\textbf{Proficient}{: Java, Python, REST Frameworks (Flask, Dropwizard), Maven, MongoDB, SQL, Docker, Git version control, C\#, Arduino}
+    	}
+	\item{
+		\textbf{Learning}{: Kubernetes, InfluxDB, PostgreSQL, Django, Node.js}
+	}
+  \resumeSubHeadingListEnd
+%---------------------------------------------
 
 %----------HOBBIES
 \section{Hobbies}
