--- a/resume.tex
+++ b/resume.tex
@@ -83,7 +83,7 @@
 \begin{tabular*}
 {\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{{\Large Mershab Issadien}} & \href{mailto:mershab99@gmail.com}{mershab99@gmail.com}\\
- "Sufficiently advanced technology is indistinguishable from magic"  & \href +1-647-284-8025 \\
+ "Sufficiently advanced technology is indistinguishable from magic"  & \href 1647-284-8025 \\
  - Arthur C. Clarke &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
 & \href{www.github.com/mershab99}{github.com/mershab99}\\
 % & GitHub : \href{www.github.com/mershab99}{www.github.com/mershab99}
@@ -94,12 +94,12 @@
 \section{Programming Skills}
   \resumeItemListStart
   	\resumeItem{Languages/Databases}
-  	{: Java, Python, C\#, Arduino (Processing) MongoDB, SQL, InfluxDB}
+  	{: Java, Python, C\#, Arduino (Processing), MongoDB, SQL, InfluxDB}
    	\resumeItem{Frameworks/APIs/Tools}
-   	{: Flask, Dropwizard, Django, JSON, Maven, Git VCS, Docker, Kubernetes}
+   	{: Flask, Dropwizard, Django, JSON, Maven}
    	\resumeItem{IDE/OS}{: VS Code, Intellij, Pycharm, CentOS, Ubuntu, Kali Linux}
-  	\resumeItem{Learning}
-  	{: PostgreSQL, Node.js, Jenkins}
+  	\resumeItem{Dev Ops}
+  	{: Git VCS, Docker, Kubernetes, Jenkins}
 \resumeItemListEnd
 %---------------------------------------------
 
@@ -111,19 +111,17 @@
 	{Full-Stack Software Engineer}{July 2020 - Present}
 		\resumeItemListStart
 			\resumeItem{}
-			{Developed a REST APIs using Flask and Dropwizard. Built Resources including User Management Resources}
+			{Developed  REST APIs using Flask and Dropwizard to automate processes, and provide business intelligence.}
 			\resumeItem{}
-			{Built data access layer for Rest API using MongoDB, leveraged both python and mongo libraries}
+			{Built data access layer for services using MongoDB, leveraged both python and mongo libraries}
 			\resumeItem{}
-			{Increased time series retrieval by implementing an in-memory caching layer for MongoDB}
+			{Implemented in memory caching alyer for MongoDB which resulted in reduced time-series query latencies.}
 			\resumeItem{}
-			{Developed asynchronous job scheduler in Python and Java to mitigate expensive HTTP requests}	
+			{Designed asynchronous job scheduler in Python and Java to mitigate expensive HTTP requests}	
 			\resumeItem{}
 			{Integrated Sliced and Diced data with recommendations engine to produce valuable real estate insights}
 			\resumeItem{}
-			{Achieved 80\% code coverage with unit tests.}
-			\resumeItem{}
-			{Helped deployment of backend infrastructure using Docker and Kubernetes}
+			{Adhered to 80\% unit test coverage policy. Deployed stack on Docker and Kubernetes}
 			\resumeItem{}
 			{Worked in Agile teams on a Feature-by-Feature basis using SCRUM organizational tools }
 			\resumeItem{}
@@ -207,7 +205,7 @@
 \section{References}
 	\resumeSubHeadingListStart
 		\resumeSubheading
-		{References Available Upon Request}{}{}{}
+		{Available Upon Request}{}{}{}
 	\resumeSubHeadingListEnd
 
 
