--- a/resume.tex
+++ b/resume.tex
@@ -82,9 +82,9 @@
 %----------HEADING-----------------
 \begin{tabular*}
 {\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{{\Large Mershab Issadien}} & \href{mailto:mershab99@gmail.com}{mershab99@gmail.com}\\
- "Sufficiently advanced technology is indistinguishable from magic"  & \href 1647-284-8025 \\
- - Arthur C. Clarke &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
+  \textbf{{\Huge Mershab Issadien}} & \href{mailto:mershab99@gmail.com}{mershab99@gmail.com}\\
+\small "Sufficiently advanced technology is indistinguishable from magic"  & \href 1647-284-8025 \\
+ \footnotesize - Arthur C. Clarke &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
 & \href{www.github.com/mershab99}{github.com/mershab99}\\
 % & GitHub : \href{www.github.com/mershab99}{www.github.com/mershab99}
 \end{tabular*}
@@ -99,7 +99,7 @@
    	{: Flask, Dropwizard, Django, JSON, Maven}
    	\resumeItem{IDE/OS}{: VS Code, Intellij, Pycharm, CentOS, Ubuntu, Kali Linux}
   	\resumeItem{Dev Ops}
-  	{: Git VCS, Docker, Kubernetes, Jenkins}
+  	{: Git, VCS, Docker, Kubernetes, Jenkins, Github Actions (CI/CD)}
 \resumeItemListEnd
 %---------------------------------------------
 
@@ -119,7 +119,7 @@
 			\resumeItem{}
 			{Designed asynchronous job scheduler in Python and Java to mitigate expensive HTTP requests}	
 			\resumeItem{}
-			{Integrated Sliced and Diced data with recommendations engine to produce valuable real estate insights}
+			{Integrated sliced and diced data with recommendations engine to produce valuable real estate insights}
 			\resumeItem{}
 			{Adhered to 80\% unit test coverage policy. Deployed stack on Docker and Kubernetes}
 			\resumeItem{}
@@ -215,7 +215,7 @@
 \section{Hobbies}
 	\resumeSubHeadingListStart
 	\item{
-	\textbf{}{Martial Arts, Fitness, Team Sports, Former Captain of Esports Team (DoTa 2), Fighting game enthusiast }
+	\textbf{}{Martial Arts, Fitness, Team Sports, (e-sports) Former Captain of Esports Team (DoTa 2), Homelab automation }
 	}
 	\resumeSubHeadingListEnd
 \end{document}
