resume update April 27th

--- a/resume.tex
+++ b/resume.tex
@@ -83,8 +83,8 @@
 \begin{tabular*}
 {\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{{\Huge Mershab Issadien}} & \href{mailto:mershab99@gmail.com}{mershab99@gmail.com}\\
-\small "Sufficiently advanced technology is indistinguishable from magic"  & \href 1647-284-8025 \\
- \footnotesize - Arthur C. Clarke &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
+ \href 1647-284-8025 \\
+ &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
 & \href{www.github.com/mershab99}{github.com/mershab99}\\
 % & GitHub : \href{www.github.com/mershab99}{www.github.com/mershab99}
 \end{tabular*}
@@ -94,12 +94,12 @@
 \section{Programming Skills}
   \resumeItemListStart
   	\resumeItem{Languages/Databases}
-  	{: Java, Python, C\#, Arduino (Processing), MongoDB, SQL, InfluxDB}
+  	{: Python, Java, C\#, Arduino (Processing), MongoDB, SQL, InfluxDB}
    	\resumeItem{Frameworks/APIs/Tools}
-   	{: Flask, Dropwizard, Django, JSON, Maven}
-   	\resumeItem{IDE/OS}{: VS Code, Intellij, Pycharm, CentOS, Ubuntu, Kali Linux}
+   	{: Flask, Sendgrid, WebRTC, Dropwizard, Django, JSON, Maven}
+   	\resumeItem{IDE/OS}{: Pycharm, VS Code, Intellij, CentOS, Ubuntu, Linux Mint, KDE}
   	\resumeItem{Dev Ops}
-  	{: Git, VCS, Docker, Kubernetes, Jenkins, Github Actions (CI/CD)}
+  	{: AWS, Git, VCS, Docker, Kubernetes, Jenkins, Github Actions (CI/CD)}
 \resumeItemListEnd
 %---------------------------------------------
 
@@ -111,15 +111,18 @@
 	{Full-Stack Software Engineer}{July 2020 - Present}
 		\resumeItemListStart
 			\resumeItem{}
+			{Connecting users to homes powered by Python based ML reccomendations engine
+			\resumeItem{}
 			{Developed  REST APIs using Flask and Dropwizard to automate processes, and provide business intelligence.}
 			\resumeItem{}
 			{Built data access layer for services using MongoDB, leveraged both python and mongo libraries}
 			\resumeItem{}
-			{Implemented in memory caching alyer for MongoDB which resulted in reduced time-series query latencies.}
+			{Implemented in memory caching lalyer for MongoDB which resulted in reduced time-series query latencies.}
 			\resumeItem{}
 			{Designed asynchronous job scheduler in Python and Java to mitigate expensive HTTP requests}	
 			\resumeItem{}
-			{Integrated sliced and diced data with recommendations engine to produce valuable real estate insights}
+			{ 
+				Integrated sliced and diced data with recommendations engine to produce valuable real estate insights}
 			\resumeItem{}
 			{Adhered to 80\% unit test coverage policy. Deployed stack on Docker and Kubernetes}
 			\resumeItem{}
