April 30th update

--- a/resume.tex
+++ b/resume.tex
@@ -94,9 +94,9 @@
 \section{Programming Skills}
   \resumeItemListStart
   	\resumeItem{Languages/Databases}
-  	{: Python, Java, C\#, Arduino (Processing), MongoDB, SQL, InfluxDB}
+  	{: Python, Java, C\#, Arduino (Processing), MongoDB, SQL, InfluxDB, Redis}
    	\resumeItem{Frameworks/APIs/Tools}
-   	{: Flask, Sendgrid, WebRTC, Dropwizard, Django, JSON, Maven}
+   	{: RabbitMQ, Flask, Sendgrid, WebRTC, Dropwizard, Django, JSON, Maven}
    	\resumeItem{IDE/OS}{: Pycharm, VS Code, Intellij, CentOS, Ubuntu, Linux Mint, KDE}
   	\resumeItem{Dev Ops}
   	{: AWS, Git, VCS, Docker, Kubernetes, Jenkins, Github Actions (CI/CD)}
@@ -111,18 +111,19 @@
 	{Full-Stack Software Engineer}{July 2020 - Present}
 		\resumeItemListStart
 			\resumeItem{}
-			{Connecting users to homes powered by Python based ML reccomendations engine
+			{Engineered python based ML recommendations engine using geospatial data sets to match users to homes}
 			\resumeItem{}
 			{Developed  REST APIs using Flask and Dropwizard to automate processes, and provide business intelligence.}
 			\resumeItem{}
 			{Built data access layer for services using MongoDB, leveraged both python and mongo libraries}
 			\resumeItem{}
-			{Implemented in memory caching lalyer for MongoDB which resulted in reduced time-series query latencies.}
+			{Implemented in memory caching layer for MongoDB which resulted in reduced time-series query latency.}
 			\resumeItem{}
-			{Designed asynchronous job scheduler in Python and Java to mitigate expensive HTTP requests}	
+			{Designed asynchronous job scheduler in Python and Java to mitigate expensive HTTP requests}
 			\resumeItem{}
-			{ 
-				Integrated sliced and diced data with recommendations engine to produce valuable real estate insights}
+			{Manage AWS microservice deployment infrastructure. }
+			\resumeItem{}
+			{Integrated sliced and diced data with recommendations engine to produce valuable real estate insights}
 			\resumeItem{}
 			{Adhered to 80\% unit test coverage policy. Deployed stack on Docker and Kubernetes}
 			\resumeItem{}
@@ -131,13 +132,16 @@
 			{Worked under direct supervision and collaborated with ex-Salesforce, ex-Uber, ex-Microsoft software engineers }
 		\resumeItemListEnd
 	    \resumeSubheading
-	      {The Home Depot}{Richmond Hill, ON}
-	      {Sales Associate/Inventory Associate}{May 2019 - August 2019}
+	      {Founderbyte}{Richmond Hill, ON}
+	      {Full-Stack Software Engineer}{January 2021 - Present}
 	      \resumeItemListStart
-	        \resumeItem{System Feedback }
-	          {Learned the inventory system (SAP powered) as well as provided bug feedback for the software development team. Identified and called out process inefficiencies saving employees an hour a day.}
-		\resumeItem{Accomplishments }
-		 {Sales Employee of the Month (July), 3x Homer Awards}     
+		  \resumeItem{Engineered General Purpose Mail Service API}\newline
+	          {Python REST API with Socket.io for webhooks using Sendgrid
+			  Deployed as a Lambda function on AWS}
+	        \resumeItem{Deployed Websites} \newline
+	          {Founderbyte.com aquaries.co
+                Integrated client websites with Mail API}
+  
 \resumeItemListEnd
 
 \resumeSubHeadingListEnd
@@ -150,9 +154,9 @@
       {BSc. Honours Computer Science}{September 2017 - Current}
 	\resumeItemListStart
 		\resumeItem{Notable Courses }
-		{Data Structures and Algorithms, Statistics, Formal Languages, Technical Report Writing, Requirements Engineering, Software Engineering}
+		{Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing, }
 	\resumeItem{Clubs/Projects }
-		{Uottawa CSME (Engineering Association). Built e-mail system for uOttawaCSME.ca. UOttawa Dota 2 B Team Captain}	
+		{Uottawa CSME (Engineering Association). Built e-mail system for uOttawaCSME.ca using PHP. UOttawa Dota 2 B Team Captain}	
 %		\resumeItem{Sports}
 %		{Captain of the UOttawa Dota 2 B Team}
 	\resumeItemListEnd
@@ -174,7 +178,7 @@
 \section{Projects}
   \resumeSubHeadingListStart
 	\resumeSubheading
-	{Ryerson Climate Hack-To-Action Hackathon}{Toronto, ON}
+	{Ryerson DMZ Climate Hack-To-Action Hackathon}{Toronto, ON}
 	{Team Hackathon Competitor - 3rd Place }{May 2016}
 		\resumeItemListStart
 			\resumeItem{}
@@ -210,15 +214,5 @@
 		\resumeSubheading
 		{Available Upon Request}{}{}{}
 	\resumeSubHeadingListEnd
-
-
-%
-
-%----------HOBBIES
-\section{Hobbies}
-	\resumeSubHeadingListStart
-	\item{
-	\textbf{}{Martial Arts, Fitness, Team Sports, (e-sports) Former Captain of Esports Team (DoTa 2), Homelab automation }
-	}
-	\resumeSubHeadingListEnd
+	
 \end{document}
