--- a/resume.tex
+++ b/resume.tex
@@ -83,8 +83,7 @@
 \begin{tabular*}
 {\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{{\Huge Mershab Issadien}} & \href{mailto:mershab99@gmail.com}{mershab99@gmail.com}\\
- \href 1647-284-8025 \\
- &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
+ \href 1647-284-8025 &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
 & \href{www.github.com/mershab99}{github.com/mershab99}\\
 % & GitHub : \href{www.github.com/mershab99}{www.github.com/mershab99}
 \end{tabular*}
@@ -94,12 +93,12 @@
 \section{Programming Skills}
   \resumeItemListStart
   	\resumeItem{Languages/Databases}
-  	{: Python, Java, C\#, Arduino (Processing), MongoDB, SQL, InfluxDB, Redis}
+  	{: Python, Java, C\#, Linux Shell, YAML,  MongoDB, SQL, InfluxDB, Redis}
    	\resumeItem{Frameworks/APIs/Tools}
    	{: RabbitMQ, Flask, Sendgrid, WebRTC, Dropwizard, Django, JSON, Maven}
-   	\resumeItem{IDE/OS}{: Pycharm, VS Code, Intellij, CentOS, Ubuntu, Linux Mint, KDE}
+   	\resumeItem{IDE/OS}{: CentOS, Ubuntu, Pycharm, VS Code, Intellij, Linux Mint, KDE}
   	\resumeItem{Dev Ops}
-  	{: AWS, Git, VCS, Docker, Kubernetes, Jenkins, Github Actions (CI/CD)}
+  	{: AWS, Git, VCS, Ansible, Docker, Kubernetes, Jenkins, Github Actions (CI/CD), Proxmox, Esxi}
 \resumeItemListEnd
 %---------------------------------------------
 
@@ -178,12 +177,20 @@
 \section{Projects}
   \resumeSubHeadingListStart
 	\resumeSubheading
+	{Uottahack 4}{Ottawa, ON - Online}
+	{Winner - Best Hardware Hack}{February 2021}
+		\resumeItemListStart
+			\resumeItem{}
+			{Deployed a computer vision application using Raspberry Pi, Google Vision API, backend Python API and front end UI hosted on GKS Kubernetes }
+		\resumeItemListEnd
+\resumeSubheading
 	{Ryerson DMZ Climate Hack-To-Action Hackathon}{Toronto, ON}
 	{Team Hackathon Competitor - 3rd Place }{May 2016}
 		\resumeItemListStart
 			\resumeItem{}
 			{Developed a user focused carbon credit Android application with a SQL backend within 24 hours.}
 		\resumeItemListEnd
+    
 %	\resumeSubheading
 %	{YRDSB QUEST 2016}{Richmond Hill, ON}
 %	{Engineering Team Lead}{May 2016}
@@ -209,10 +216,18 @@
   \resumeSubHeadingListEnd
 
 %---------REFERENCES--------
-\section{References}
+%\section{References}
+%	\resumeSubHeadingListStart
+%		\resumeSubheading
+%		{Available Upon Request}{}{}{}
+%	\resumeSubHeadingListEnd
+%	
+  %----------HOBBIES
+\section{Hobbies}
 	\resumeSubHeadingListStart
-		\resumeSubheading
-		{Available Upon Request}{}{}{}
+	\item{
+	\textbf{}{Homelab, Fitness, E-Sports (Dota 2), Martial Arts, Electronics}
+	}
 	\resumeSubHeadingListEnd
-	
+  
 \end{document}
