--- a/resume.tex
+++ b/resume.tex
@@ -107,24 +107,22 @@
   \resumeSubHeadingListStart
 	\resumeSubheading
 	{Praizl Inc.}{Richmond Hill, ON - Remote}
-	{Full-Stack Software Engineer}{July 2020 - Present}
+	{Full-Stack Software Engineer}{July 2020 - June 2021}
 		\resumeItemListStart
 			\resumeItem{}
-			{Engineered python based ML recommendations engine using geospatial data sets to match users to homes}
+			{Engineered python based ML recommendations engine using geospatial, demographic, and qualitative data sets to match users to homes}
 			\resumeItem{}
-			{Developed  REST APIs using Flask and Dropwizard to automate processes, and provide business intelligence.}
+			{Provided business intelligence through engineered REST API's using Flask and Dropwizard}
 			\resumeItem{}
-			{Built data access layer for services using MongoDB, leveraged both python and mongo libraries}
+			{Engineered data access layer in Python and Java to enable analytics on a MongoDB data lake.}
 			\resumeItem{}
-			{Implemented in memory caching layer for MongoDB which resulted in reduced time-series query latency.}
+			{Reduced query times by 85\% by implementing an memory caching layer using Redis.}
 			\resumeItem{}
 			{Designed asynchronous job scheduler in Python and Java to mitigate expensive HTTP requests}
 			\resumeItem{}
-			{Manage AWS microservice deployment infrastructure. }
+			{Managed AWS EC2 micro-service containerized deployment infrastructure. }
 			\resumeItem{}
-			{Integrated sliced and diced data with recommendations engine to produce valuable real estate insights}
-			\resumeItem{}
-			{Adhered to 80\% unit test coverage policy. Deployed stack on Docker and Kubernetes}
+			{Brought code base to 80\% unit test coverage on critical algorithms. }
 			\resumeItem{}
 			{Worked in Agile teams on a Feature-by-Feature basis using SCRUM organizational tools }
 			\resumeItem{}
@@ -132,11 +130,10 @@
 		\resumeItemListEnd
 	    \resumeSubheading
 	      {Founderbyte}{Richmond Hill, ON}
-	      {Full-Stack Software Engineer}{January 2021 - Present}
+	      {Full-Stack Software Engineer}{January 2021 - June 2021}
 	      \resumeItemListStart
 		  \resumeItem{Engineered General Purpose Mail Service API}\newline
-	          {Python REST API with Socket.io for webhooks using Sendgrid
-			  Deployed as a Lambda function on AWS}
+	          {Minimized deployment costs by creating an event driven mail service using AWS Lambda and Sendgrid}
 	        \resumeItem{Deployed Websites} \newline
 	          {Founderbyte.com aquaries.co
                 Integrated client websites with Mail API}
@@ -155,7 +152,8 @@
 		\resumeItem{Notable Courses }
 		{Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing, }
 	\resumeItem{Clubs/Projects }
-		{Uottawa CSME (Engineering Association). Built e-mail system for uOttawaCSME.ca using PHP. UOttawa Dota 2 B Team Captain}	
+		{Uottawa CSME (Engineering Association). uOttawaCSME.ca;
+    UOttawa Dota 2 B Team Captain}	
 %		\resumeItem{Sports}
 %		{Captain of the UOttawa Dota 2 B Team}
 	\resumeItemListEnd
@@ -181,7 +179,8 @@
 	{Winner - Best Hardware Hack}{February 2021}
 		\resumeItemListStart
 			\resumeItem{}
-			{Deployed a computer vision application using Raspberry Pi, Google Vision API, backend Python API and front end UI hosted on GKS Kubernetes }
+			{Deployed AI computer vision application using Raspberry Pi, Google Vision API,
+      Deployed both backend and frotn end on GKS Kubernetes}
 		\resumeItemListEnd
 \resumeSubheading
 	{Ryerson DMZ Climate Hack-To-Action Hackathon}{Toronto, ON}
@@ -221,7 +220,6 @@
 %		\resumeSubheading
 %		{Available Upon Request}{}{}{}
 %	\resumeSubHeadingListEnd
-%	
   %----------HOBBIES
 \section{Hobbies}
 	\resumeSubHeadingListStart
