--- a/resume.tex
+++ b/resume.tex
@@ -95,10 +95,12 @@
   	\resumeItem{Languages/Databases}
   	{: Python, Java, C\#, Linux Shell, YAML,  MongoDB, SQL, InfluxDB, Redis}
    	\resumeItem{Frameworks/APIs/Tools}
-   	{: RabbitMQ, Flask, Sendgrid, WebRTC, Dropwizard, Django, JSON, Maven}
-   	\resumeItem{IDE/OS}{: CentOS, Ubuntu, Pycharm, VS Code, Intellij, Linux Mint, KDE}
+   	{: RabbitMQ, Flask, WebRTC, Dropwizard, Django, JSON, Maven}
+   	\resumeItem{IDE/OS}{: CentOS (Rocky Linux), Ubuntu, Pycharm, VS Code, Intellij, Linux Mint, KDE}
   	\resumeItem{Dev Ops}
   	{: AWS, Git, VCS, Ansible, Docker, Kubernetes, Jenkins, Github Actions (CI/CD), Proxmox, Esxi}
+      	\resumeItem{AI/Analytics}
+  	{: Tensorflow, Pytorch, Darknet, Grafana, Graylog}
 \resumeItemListEnd
 %---------------------------------------------
 
@@ -135,8 +137,7 @@
 		  \resumeItem{Engineered General Purpose Mail Service API}\newline
 	          {Minimized deployment costs by creating an event driven mail service using AWS Lambda and Sendgrid}
 	        \resumeItem{Deployed Websites} \newline
-	          {Founderbyte.com aquaries.co
-                Integrated client websites with Mail API}
+	          {Hosted client websites on DigitalOcean with custom mail service. Founderbyte.com, aquaries.co}
   
 \resumeItemListEnd
 
@@ -176,11 +177,12 @@
   \resumeSubHeadingListStart
 	\resumeSubheading
 	{Uottahack 4}{Ottawa, ON - Online}
-	{Winner - Best Hardware Hack}{February 2021}
+	{Team Winner - Best Hardware Hack}{February 2021}
 		\resumeItemListStart
 			\resumeItem{}
-			{Deployed AI computer vision application using Raspberry Pi, Google Vision API,
-      Deployed both backend and frotn end on GKS Kubernetes}
+			{Sanitation Station Companion: https://devpost.com/software/sanitation-station-companion}
+      \resumeItem{}
+      {Deployed AI computer vision application using Raspberry Pi, GKS, and Google Vision API}
 		\resumeItemListEnd
 \resumeSubheading
 	{Ryerson DMZ Climate Hack-To-Action Hackathon}{Toronto, ON}
