--- a/resume.tex
+++ b/resume.tex
@@ -153,23 +153,12 @@
 		\resumeItem{Notable Courses }
 		{Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing, }
 	\resumeItem{Clubs/Projects }
-		{Uottawa CSME (Engineering Association). uOttawaCSME.ca;
-    UOttawa Dota 2 B Team Captain}	
+		{Uottawa CSME (Engineering Association). uOttawaCSME.ca; UOttawa Dota 2 B Team Captain}	
 %		\resumeItem{Sports}
 %		{Captain of the UOttawa Dota 2 B Team}
 	\resumeItemListEnd
   \resumeSubHeadingListEnd
 
-      
-% --------Multiple Positions Heading------------
-%    \resumeSubSubheading
-%     {Software Engineer I}{Oct 2014 - Sep 2016}
-%     \resumeItemListStart
-%        \resumeItem{Apache Beam}
-%          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
-%     \resumeItemListEnd
-%    \resumeSubHeadingListEnd
-%-------------------------------------------
 
 
 %-----------PROJECTS-----------------
