--- a/resume.tex
+++ b/resume.tex
@@ -98,7 +98,7 @@
    	{: RabbitMQ, Flask, WebRTC, Dropwizard, Django, JSON, Maven}
    	\resumeItem{IDE/OS}{: CentOS (Rocky Linux), Ubuntu, Pycharm, VS Code, Intellij, Linux Mint, KDE}
   	\resumeItem{Dev Ops}
-  	{: AWS, Git, VCS, Ansible, Docker, Kubernetes, Jenkins, Github Actions (CI/CD), Proxmox, Esxi}
+  	{: AWS, GKS, Git, VCS, Ansible, Docker, Kubernetes, Jenkins, Github Actions (CI/CD), Proxmox, Esxi}
       	\resumeItem{AI/Analytics}
   	{: Tensorflow, Pytorch, Darknet, Grafana, Graylog}
 \resumeItemListEnd
@@ -108,36 +108,38 @@
 \section{Experience}
   \resumeSubHeadingListStart
 	\resumeSubheading
-	{Praizl Inc.}{Richmond Hill, ON - Remote}
+	{Praizl Inc. - DMZ 2021}{Richmond Hill, ON}
 	{Full-Stack Software Engineer}{July 2020 - June 2021}
 		\resumeItemListStart
 			\resumeItem{}
-			{Engineered python based ML recommendations engine using geospatial, demographic, and qualitative data sets to match users to homes}
+			{Engineered ML recommendations engine using multiple data sets to accurately match users to their dream homes}
 			\resumeItem{}
-			{Provided business intelligence through engineered REST API's using Flask and Dropwizard}
+			{Provided business intelligence and user management through REST API's using Flask and Dropwizard}
 			\resumeItem{}
-			{Engineered data access layer in Python and Java to enable analytics on a MongoDB data lake.}
+			{Built insightful analytics framework on top of MongoDB datalake; used to process GB's of data.}
 			\resumeItem{}
 			{Reduced query times by 85\% by implementing an memory caching layer using Redis.}
 			\resumeItem{}
-			{Designed asynchronous job scheduler in Python and Java to mitigate expensive HTTP requests}
+			{Implemented asynchronous job scheduler in Python and Java to reduce API response time to users by 90\%}
 			\resumeItem{}
-			{Managed AWS EC2 micro-service containerized deployment infrastructure. }
+			{Performed infrastructure level Dev-Ops work with containerized deployments on AWS EC2. }
 			\resumeItem{}
 			{Brought code base to 80\% unit test coverage on critical algorithms. }
 			\resumeItem{}
-			{Worked in Agile teams on a Feature-by-Feature basis using SCRUM organizational tools }
-			\resumeItem{}
-			{Worked under direct supervision and collaborated with ex-Salesforce, ex-Uber, ex-Microsoft software engineers }
+			{Worked under direct supervision and collaborated with ex-Salesforce, ex-Uber, ex-Microsoft software engineers. In Agile teams using SCUM Methodology. }
 		\resumeItemListEnd
 	    \resumeSubheading
 	      {Founderbyte}{Richmond Hill, ON}
 	      {Full-Stack Software Engineer}{January 2021 - June 2021}
 	      \resumeItemListStart
-		  \resumeItem{Engineered General Purpose Mail Service API}\newline
+		  \resumeItem{}
 	          {Minimized deployment costs by creating an event driven mail service using AWS Lambda and Sendgrid}
-	        \resumeItem{Deployed Websites} \newline
+	        \resumeItem{}
 	          {Hosted client websites on DigitalOcean with custom mail service. Founderbyte.com, aquaries.co}
+          \resumeItem{}
+          {Built online e-commerce store with scheduling system}
+          \resumeItem{}
+          {Integrated scheduling widgets into existing website platforms.}
   
 \resumeItemListEnd
 
@@ -153,7 +155,7 @@
 		\resumeItem{Notable Courses }
 		{Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing, }
 	\resumeItem{Clubs/Projects }
-		{Uottawa CSME (Engineering Association). uOttawaCSME.ca; UOttawa Dota 2 B Team Captain}	
+		{Uottawa CSME (Engineering Association). uOttawaCSME.ca; UOttawa Dota 2 B Team Captain}
 %		\resumeItem{Sports}
 %		{Captain of the UOttawa Dota 2 B Team}
 	\resumeItemListEnd
@@ -165,13 +167,15 @@
 \section{Projects}
   \resumeSubHeadingListStart
 	\resumeSubheading
-	{Uottahack 4}{Ottawa, ON - Online}
-	{Team Winner - Best Hardware Hack}{February 2021}
+	{Uottahack 4}{Ottawa, ON}
+	{Team Winner - Sanitation Station Companion}{February 2021}
 		\resumeItemListStart
-			\resumeItem{}
-			{Sanitation Station Companion: https://devpost.com/software/sanitation-station-companion}
+      \resumeItem{}
+      {Winner of Best Hardware Hack}
       \resumeItem{}
       {Deployed AI computer vision application using Raspberry Pi, GKS, and Google Vision API}
+      \resumeItem{}
+			{https://devpost.com/software/sanitation-station-companion}
 		\resumeItemListEnd
 \resumeSubheading
 	{Ryerson DMZ Climate Hack-To-Action Hackathon}{Toronto, ON}
