--- a/resume.tex
+++ b/resume.tex
@@ -111,22 +111,23 @@
 	{Praizl Inc. - DMZ 2021}{Richmond Hill, ON}
 	{Full-Stack Software Engineer}{July 2020 - June 2021}
 		\resumeItemListStart
-			\resumeItem{}
+      \resumeItem{}
+      {Helped startup from infancy to DMZ Class of 2021}
+      \resumeItem{}
 			{Engineered ML recommendations engine using multiple data sets to accurately match users to their dream homes}
 			\resumeItem{}
 			{Provided business intelligence and user management through REST API's using Flask and Dropwizard}
 			\resumeItem{}
 			{Built insightful analytics framework on top of MongoDB datalake; used to process GB's of data.}
 			\resumeItem{}
-			{Reduced query times by 85\% by implementing an memory caching layer using Redis.}
-			\resumeItem{}
-			{Implemented asynchronous job scheduler in Python and Java to reduce API response time to users by 90\%}
+			{Reduced API response time to users by 90\% by implementing an asynchronous job scheduler and in memory caching layer using Redis}
 			\resumeItem{}
 			{Performed infrastructure level Dev-Ops work with containerized deployments on AWS EC2. }
 			\resumeItem{}
 			{Brought code base to 80\% unit test coverage on critical algorithms. }
 			\resumeItem{}
 			{Worked under direct supervision and collaborated with ex-Salesforce, ex-Uber, ex-Microsoft software engineers. In Agile teams using SCUM Methodology. }
+      
 		\resumeItemListEnd
 	    \resumeSubheading
 	      {Founderbyte}{Richmond Hill, ON}
